syntax = "proto3";

package com.example.order;

option java_multiple_files = true;
option java_package = "com.neptune.orderservice.grpc";

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string product = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string status = 1;
}
